Actualizacion deacuerdo al estandar
